Agregando un parrafo largo al index

--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <body>
     <h1>GitHub Turorial</h1>
     <p>hola Git</p>
+    <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+        Ipsum commodi atque dolore dolores sequi 
+        autem reiciendis, unde itaque inventore magni iusto voluptates
+        assumenda doloremque ad aut perspiciatis aspernatur sit totam.</span>
 </body>
 </html>
